unit image 360 view

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@fullcalendar/core": "^6.1.14",
     "@fullcalendar/daygrid": "^6.1.14",
     "@iplab/ngx-file-upload": "^18.0.0",
+    "@photo-sphere-viewer/core": "^5.11.1",
     "@sweetalert2/ngx-sweetalert2": "^12.4.0",
     "apexcharts": "^3.49.2",
     "bootstrap": "^5.3.3",
@@ -34,6 +35,7 @@
     "ngx-editor": "^17.5.4",
     "ngx-owl-carousel-o": "^18.0.0",
     "ngx-scrollbar": "^15.1.2",
+    "pannellum": "^2.5.6",
     "remixicon": "^4.3.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.14.1",
